--- a/javascript/index.html
+++ b/javascript/index.html
@@ -8,7 +8,16 @@
 		<title>Momentum</title>
 	</head>
 	<body>
-		<h1 autofocus id="title" class="hello">Grab me</h1>
+		<div class="hello">
+			<h1>Grab me</h1>
+		</div>
+		<div class="hello">
+			<h1>Grab me2</h1>
+		</div>
+		<div class="hello">
+			<h1>Grab me3</h1>
+		</div>
+
 		<script src="script.js"></script>
 	</body>
 </html>
