--- a/javascript/index.html
+++ b/javascript/index.html
@@ -9,13 +9,10 @@
 	</head>
 	<body>
 		<div class="hello">
+			<h1>Click me</h1>
+		</div>
+		<div class="hello">
 			<h1>Grab me</h1>
-		</div>
-		<div class="hello">
-			<h1>Grab me2</h1>
-		</div>
-		<div class="hello">
-			<h1>Grab me3</h1>
 		</div>
 
 		<script src="script.js"></script>
