--- a/javascript/index.html
+++ b/javascript/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div class="hello">
-			<h1>Click me</h1>
+			<h1 class="font">Click me</h1>
 		</div>
 		<div class="hello">
 			<h1>Grab me</h1>
