--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#000000" />
-		<meta
-			name="description"
-			content="Web site created using create-react-app"
-		/>
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-		<title>React App</title>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 	</head>
 	<body>
-		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="root"></div>
+		<nav>
+			<ul>
+				<li><a href="1.html">HTML</a></li>
+				<li><a href="2.html">CSS</a></li>
+				<li><a href="3.html">JavaScript</a></li>
+			</ul>
+		</nav>
+		<article>
+			<h2>HTML</h2>
+			HTML is HyperText Markup Language.
+		</article>
 	</body>
 </html>
