--- a/javascript/index.html
+++ b/javascript/index.html
@@ -19,6 +19,15 @@
 			<input type="submit" value="Log in"></input>
 		</form>
 		<h1 id="greeting" class="hidden"></h1>
-		<script src="script.js"></script>
+		<h2 id="clock">00:00:00</h2>
+		<div id="quote">
+			<span></span>
+			<span></span>
+		</div>
+		
+		<script src="js/greetings.js"></script>
+		<script src="js/clock.js"></script>
+		<script src="js/quotes.js"></script>
+		<script src="js/background.js"></script>
 	</body>
 </html>
