--- a/javascript/index.html
+++ b/javascript/index.html
@@ -19,6 +19,11 @@
 			<input type="submit" value="Log in"></input>
 		</form>
 		<h1 id="greeting" class="hidden"></h1>
+		<form id="todo-form">
+			<input type="text" placeholder="할일을 적어주세요.">
+		</form>
+		<ul id="todo-list">
+		</ul>
 		<h2 id="clock">00:00:00</h2>
 		<div id="quote">
 			<span></span>
@@ -29,5 +34,6 @@
 		<script src="js/clock.js"></script>
 		<script src="js/quotes.js"></script>
 		<script src="js/background.js"></script>
+		<script src="js/todo.js"></script>
 	</body>
 </html>
