--- a/javascript/index.html
+++ b/javascript/index.html
@@ -20,12 +20,16 @@
 		</form>
 		<h1 id="greeting" class="hidden"></h1>
 		<form id="todo-form">
-			<input type="text" placeholder="할일을 적어주세요.">
+			<input type="text" placeholder="할일을 적어주세요." required>
 		</form>
 		<ul id="todo-list">
 		</ul>
 		<h2 id="clock">00:00:00</h2>
 		<div id="quote">
+			<span></span>
+			<span></span>
+		</div>
+		<div id="weather">
 			<span></span>
 			<span></span>
 		</div>
@@ -35,5 +39,6 @@
 		<script src="js/quotes.js"></script>
 		<script src="js/background.js"></script>
 		<script src="js/todo.js"></script>
+		<script src="js/whether.js"></script>
 	</body>
 </html>
