--- a/react/index.html
+++ b/react/index.html
@@ -6,23 +6,43 @@
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
-   const root = document.getElementById("root")
-   function App(){
-      //[counter데이터를받아서 returndp 담고있다. 버튼을 클릭하면 setCounter호출, 새로운값을가지고 랜더링, counter+1
-      //초기값을 설정한다.
-      const [counter, setCounter] = React.useState(0);
-      const onClick = ()=>{
-         //새로운값으로 랜더링하고싶다.
-         setCounter(counter+1);
-      }
-      return(
-      <div>
-        <h3> Total clicks : {counter}</h3>
-        <button onClick={onClick}>Click me</button>  
-      </div>
-      )
-   }
+  //부모컴포넌트로부터 자식컴포넌트로 데이터를 보낼 수 있게 해주는 방법
+  //버튼마다 컴포넌트를 만든다.
+  //함수형 컴포넌트
+    function Btn({text, onClick}){
+    //props는 object로 받는다.
+      return <button 
+      //이벤트리스너를 가짐
+      onClick={onClick}
+      style={{
+        backgroundColor : "tomato",
+        color : "white",
+        padding: "10px 20px",
+        border : 0,
+        borderRadius :10,
 
+      }}>{text}</button>
+    }
+    //text만바꾸는 두 버튼
+   //컴포넌트가 다시 그려지지 않게함 첫번째 프롭스는 바뀔꺼지만 두번째는 안바껴야대
+   //props가 변경되지 않으면 다시 그릴 필요가없음
+    const MemorizedBtn = React.memo(Btn);
+   function App(){
+     const[value, setValue]=React.useState("Save Changes");
+     const changeValue =()=>setValue("Revert Changes");
+     //하나의 btn이 있지만 -> 재사용
+    //props이름일뿐 이벤트가아님 컴포넌트로 들어가는 무언가
+    //컴포넌트 상태가바뀌면 리랜더링함
+ 
+     return(
+     <div>
+      <MemorizedBtn text={value} onClick={changeValue}/>
+
+      <MemorizedBtn text="Continue" />
+      </div>
+     )
+  }
+      const root = document.getElementById("root");
       ReactDOM.render(<App/>, root)
 </script>
 </html>
