--- a/react/index.html
+++ b/react/index.html
@@ -2,43 +2,39 @@
 <body>
    <div id="root"></div>
 </body>
-<script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
-<script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+<script src="https://unpkg.com/react@17.0.2/umd/react.development.js" crossorigin></script>
+<script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
+<script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
 <script type="text/babel">
-  //부모컴포넌트로부터 자식컴포넌트로 데이터를 보낼 수 있게 해주는 방법
-  //버튼마다 컴포넌트를 만든다.
   //함수형 컴포넌트
-    function Btn({text, onClick}){
-    //props는 object로 받는다.
+    function Btn(props){
+      console.log(props);
       return <button 
-      //이벤트리스너를 가짐
-      onClick={onClick}
       style={{
         backgroundColor : "tomato",
         color : "white",
         padding: "10px 20px",
         border : 0,
         borderRadius :10,
+        fontSize : props.fontSize
 
-      }}>{text}</button>
+      }}>{props.text}</button>
     }
-    //text만바꾸는 두 버튼
-   //컴포넌트가 다시 그려지지 않게함 첫번째 프롭스는 바뀔꺼지만 두번째는 안바껴야대
-   //props가 변경되지 않으면 다시 그릴 필요가없음
-    const MemorizedBtn = React.memo(Btn);
+//prop들의 타입을 알려준다. 컴포넌트이름을 가져와서 fontsize에 text를 보내는 것을 방지
+//에러를 볼 수 있다. 
+    Btn.propTypes = { 
+            //props의 type 정의
+            //필수로 있어야한다.
+            text: PropTypes.string.isRequired,
+            fontSize: PropTypes.number
+        }
    function App(){
-     const[value, setValue]=React.useState("Save Changes");
-     const changeValue =()=>setValue("Revert Changes");
-     //하나의 btn이 있지만 -> 재사용
-    //props이름일뿐 이벤트가아님 컴포넌트로 들어가는 무언가
-    //컴포넌트 상태가바뀌면 리랜더링함
- 
      return(
      <div>
-      <MemorizedBtn text={value} onClick={changeValue}/>
-
-      <MemorizedBtn text="Continue" />
+      <Btn text="Save Changes" fontSize={18}/>
+      <Btn text="Save Changes" fontSize={18}/>
       </div>
      )
   }
